# python-project-52

./: .coverage  .coveragerc  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: my-check.yml
task_manager/: settings.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_name.py
task_manager/main/: urls.py  views.py
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/task_manager/: settings.py  urls.py
task_manager/task_manager/templates/: base.html
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py  0002_task_labels_alter_task_author_alter_task_executor.py  0003_alter_task_author_alter_task_description_and_more.py  0004_alter_task_author_alter_task_created_at_and_more.py
task_manager/templates/: base.html  home.html
task_manager/templates/cud/: create_update.html  delete.html
task_manager/templates/labels/: create.html  delete.html  labels_list.html  update.html
task_manager/templates/statuses/: create.html  delete.html  statuses_list.html  update.html
task_manager/templates/tasks/: create.html  delete.html  task.html  tasks_list.html  update.html
task_manager/templates/users/: create.html  delete.html  (+4 more)
task_manager/users/: __init__.py  forms.py  models.py  tests.py  urls.py  views.py
tests/: test_users.py
venv_old/: pyvenv.cfg
(+22 files in other folders)
